Fri Mar 21 21:57:34 2014  Akinori MUSHA  <knu@iDaemons.org>

	* configure.in: Fix a build problem with clang and --with-opt-dir.
	  If ruby is configured with --with-opt-dir=dir when using clang
	  as compiler, a warning `clang: warning: argument unused during
	  compilation: '-I dir'` is emitted almost every time clang
	  compiles a file.  Unfortunately, RUBY_CHECK_PRINTF_PREFIX takes
	  any output from the compiler as fatal error, and the check thus
	  fails due to the warning.  This is an attempt to fix the problem
	  by adding a flag -Qunused-arguments to CFLAGS locally in the
	  function to suppress the warning. [ruby-dev:48062] [Bug #9658]
	  [Fixes GH-571] https://github.com/ruby/ruby/pull/571

Fri Mar 21 16:31:56 2014  Zachary Scott  <e@zzak.io>

	* gc.c: [DOC] Fix call-seq for GC.start by @jasonrclark [Fixes GH-572]
	  https://github.com/ruby/ruby/pull/572

Thu Mar 20 11:37:28 2014  James Edward Gray II  <james@graysoftinc.com>

	* lib/csv.rb: Fixed a broken regular expression that was causing
	  CSV to miss escaping some special meaning characters when used
	  in parsing.
	  Reported by David Unric
	  [ruby-core:54986] [Bug #8405]

Thu Mar 20 16:53:07 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (objspace_malloc_increase): should not invoke
	  garbage_collect_with_gvl() here on non-ruby threads.

	  Should just ignore the malloc_increase.

	  This issue is pointed by Eric Wong [ruby-core:61519].

Thu Mar 20 13:05:16 2014  Koichi Sasada  <ko1@atdot.net>

	* struct.c (rb_struct_alloc): use RARRAY_CONST_PTR() instead of
	  RARRAY_PTR().

Thu Mar 20 12:59:39 2014  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/intern.h (rb_obj_call_init, rb_class_new_instance):
	  constify a parameter (VALUE *).
	  I believe this incompatibility doesn't break any code.
	  However, if you have trouble, please tell us.

	* eval.c, object.c: ditto.

Thu Mar 20 12:31:26 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (rb_method_entry_get_without_cache): get rid of